--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+static
+graphics
+.idea
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -5,8 +9,6 @@ __pycache__/
 
 # C extensions
 *.so
-
-.idea
 
 # Distribution / packaging
 .Python
