Notify on Event Flag Function

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "dsprh/PropertyHook"]
 	path = dsprh/PropertyHook
 	url = https://github.com/Nahnahchi/PropertyHook.git
+[submodule "dsbin/PropertyHook"]
+	path = dsbin/PropertyHook
+	url = https://github.com/Nahnahchi/PropertyHook.git
